--- a/index.html
+++ b/index.html
@@ -325,6 +325,57 @@
   </div>
   </div>
   <div class="spacer"></div>
+  <div class="demo-row">
+    <div class="container" id="id-sponsors">
+      <div class="text-center">
+      <h1 style="margin:20px 0;color:#fff;">
+        { Sponsors }
+      </h1>
+    </div>
+    <div id="sponsor-carousel" class="carousel slide" data-ride="carousel"> 
+      <!-- Indicators -->
+      
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <div class="row">
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="sponsor/unstop.png" style="width: 200px;" /></div>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="sponsor/jetbrain.png" style="width: 110px;" /></div>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="sponsor/flatlogic.png" style="width: 200px;" /></div>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="sponsor/echo3d.png" style="width: 200px;" /></div>
+            </div>
+          </div>
+        </div> <!--
+        <div class="item">
+          <div class="row">
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo1.jpg" style="width: 160px;" /></div>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo2.jpg" style="width: 160px;" /></div>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo3.jpg" style="width: 160px;" /></div>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo4.jpg" style="width: 160px;" /></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    </div>
+    </div>
+    </div>
+    </div>
+  <div class="spacer"></div>
   <div class="bottom reveal fade-bottom">
     <div class="bottomBox">
     <div class="container">
@@ -500,6 +551,11 @@ let counts = setInterval(updated);
   animateCounter('counter2', 46, 9000); // Counter 2 from 0 to 500 in 1500 milliseconds
   animateCounter('counter3', 19, 9000); // Counter 3 from 0 to 1000 in 2500 milliseconds
   animateCounter('counter4', 70000, 9000);
+
+  $('#sponsor-carousel').carousel({
+  interval: 3000,
+  cycle: true
+}); 
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
