--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="card-body">
         <h5 class="card-title">Social Enterprise</h5>
         <p class="card-text">Discover themes that harness the power of business for social good, merging profit with positive impact</p>
-        <button type="button" class="btn btn-secondary">Read More -></button>
+        <!-- <button type="button" class="btn btn-secondary">Read More -></button> -->
 
       </div>
     </div>
@@ -159,7 +159,6 @@
       <div class="card-body">
         <h5 class="card-title">Sustainability</h5>
         <p class="card-text">Explore eco-conscious themes, driving innovation to solve environmental challenges and promote sustainable solutions.</p>
-        <button type="button" class="btn btn-secondary">Read More -></button>
       </div>
     </div>
   </div>
@@ -169,7 +168,6 @@
       <div class="card-body">
         <h5 class="card-title">Accessibility and Inclusion</h5>
         <p class="card-text">Championing technology that breaks barriers and fosters a world where everyone, regardless of ability or background, can participate fully and equally.</p>
-        <button type="button" class="btn btn-secondary">Read More -></button>
       </div>
     </div>
   </div>
@@ -179,7 +177,6 @@
       <div class="card-body">
         <h5 class="card-title">Open Innovation with AI/ML</h5>
         <p class="card-text">Delve into AI and Machine Learning themes, fostering collaborative, data-driven advancements in the world of technology and innovation.</p>
-        <button type="button" class="btn btn-secondary">Read More -></button>
       </div>
     </div>
   </div>
@@ -331,6 +328,9 @@
       <h1 style="margin:20px 0;color:#fff;">
         { Sponsors }
       </h1>
+      <h6 style="margin-bottom:20px">
+        If you're interested in sponorsing our event, reach out to <a style="color: white; text-decoration: underline;" href="mailto:sponsor@nodebrew.tech">sponsor@nodebrew.tech</a>
+      </h6>
     </div>
     <div id="sponsor-carousel" class="carousel slide" data-ride="carousel"> 
       <!-- Indicators -->
