integrated Airtable, and sponsor section to the website

--- a/index.html
+++ b/index.html
@@ -348,6 +348,51 @@
     </div>
     </div>
   </div>
+
+<!-- dummy airtable -->
+
+<div id="airtable-data"></div>
+
+
+<!-- Sponsor Section -->
+    <section class="sponsor-section">
+      <div class="box">
+          <h2 class="section-title">Our Sponsors</h2>
+          <div class="sponsor-list">
+              <!-- Sponsor 1 -->
+              <div class="sponsor">
+                  <img src="img.png" alt="Sponsor 1">
+                  <p class="sponsor-description"> description or company name</p>
+              </div>
+
+              <!-- Sponsor 2 -->
+              <div class="sponsor">
+                  <img src="img.png" alt="Sponsor 2">
+                  <p class="sponsor-description">description or company name</p>
+              </div>
+              <!-- sponsor 3 -->
+              <div class="sponsor">
+                <img src="img.png" alt="Sponsor 3">
+                <p class="sponsor-description">description or company name</p>
+            </div>
+          <!-- sponsor 4 -->
+            <div class="sponsor">
+              <img src="img.png" alt="Sponsor 4">
+              <p class="sponsor-description"> description or company name</p>
+          </div>
+          <!-- sponor 5 -->
+          <div class="sponsor">
+            <img src="img.png" alt="Sponsor 4">
+            <p class="sponsor-description"> description or company name</p>
+        </div>
+ 
+          </div>
+      </div>
+  </section>
+
+
+
+  <!-- spacer -->
   <div class="spacer"></div>
   <hr style="margin-left: 50px; margin-right: 50px;">
   <footer class="bg-transparent text-white text-center text-lg-start">
@@ -501,6 +546,7 @@ let counts = setInterval(updated);
   animateCounter('counter3', 19, 9000); // Counter 3 from 0 to 1000 in 2500 milliseconds
   animateCounter('counter4', 70000, 9000);
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
